# CerberusNet

./: .gitignore  CMakeLists.txt  README.md
nnet_training/: README.md  evaluate_model.py  experiment_comp.py  job.script  training_executor.py
nnet_training/configs/: HRNetV2_cs.json  HRNetV2_f_kt.json  HRNetV2_kt.json  HRNetV2_s_kt.json  HRNetV2_sd_cs.json  HRNetV2_sd_kt.json  HRNetV2_sfd_cs.json  HRNetV2_sfd_kt.json  Kitti_test.json  MonoSFD_cs.json  MonoSF_gauss.json  SFD_test.json
nnet_training/correlation_package/: correlation.py  correlation_cuda.cpp  correlation_cuda_kernel.cuh  setup.py
nnet_training/datasets/: __init__.py  cityscapes_bbox_generator.py  cityscapes_dataset.py  cityscapes_panoptic_transform.py  custom_batch_sampler.py  daterloader_utils.py  kitti_dataset.py
nnet_training/loss_functions/: UnFlowLoss.py  __init__.py  depth_losses.py  detr.py  detr_loss.py  loss_functions.py  panoptic_loss.py  rmi.py  seg_losses.py
nnet_training/nnet_models/: __init__.py  aspp.py  cerberus.py  deeplab_panoptic.py  detr_sfd.py  fast_scnn.py  hrnetv2.py  mono_segflow.py  mono_segflowdepth.py  nnet_models.py  nnet_modules.py  nnet_ops.py  ocr_utils.py  ocrnet.py  ocrnet_segflow.py  ocrnet_segflowdepth.py  ocrnet_sfd.py  pwcnet.py  pwcnet_modules.py  pwcnet_sfd.py
nnet_training/nnet_models/detr/: backbone.py  box_ops.py  detr.py  matcher.py  misc.py  position_encoding.py  segmentation.py  transformer.py
nnet_training/statistics/: __init__.py  base.py  depth.py  object_detection.py  optical_flow.py  panoptic.py  semantic.py
nnet_training/training_frameworks/: __init__.py  mono_flow_trainer.py  mono_seg_flow_depth_trainer.py  mono_seg_flow_trainer.py  mono_seg_trainer.py  stereo_depth_trainer.py  stereo_flow_trainer.py  stereo_seg_depth_trainer.py  stereo_seg_trainer.py  stereo_segmentation_trainer.py  trainer_base_class.py
nnet_training/utilities/: CityScapes.py  CustomSampler.py  KITTI.py  KITTI_Flow.py  UnFlowLoss.py  cityscapes_bbox_generator.py  cityscapes_dataset.py  custom_batch_sampler.py  dataset.py  generate_cs_demo.py  kitti_dataset.py  loss_functions.py  lr_scheduler.py  metrics.py  model_trainer.py  onnx_export.py  panoptic_post_processing.py  rmi.py  rmi_utils.py  visualisation.py
nnet_training_framework/: StereoModels.py  dataset.py  fast_scnn.py  job.script  loss_functions.py  metrics.py  mono_flow_trainer.py  mono_seg_trainer.py  nnet_models.py  nnet_modules.py  nnet_ops.py  stereo_depth_trainer.py  stereo_flow_trainer.py  stereo_seg_depth_trainer.py  stereo_segmentation_trainer.py  trainer_base_class.py
nnet_training_framework/correlation_package/: correlation.py  correlation_cuda.cpp  correlation_cuda_ARF.cpp  correlation_cuda_PWC.cpp  correlation_cuda_PWC.cu  correlation_cuda_kernel.cu  correlation_cuda_kernel.cuh  correlation_cuda_kernel_ARF.cu  correlation_cuda_kernel_PWC.cu  correlation_cuda_kernel_PWC.cuh  setup.py
nnet_traning_framework/: StereoModels.py  chat_test_model.py  dataset.py  fast_scnn.py  loss_functions.py  lossfunctions.py  metrics.py  mono_seg_trainer.py  onnx_export.py  segmentation_trainer.py  stereo_depth_trainer.py  stereo_seg_depth_trainer.py  stereo_segmentation_trainer.py  trainer_base_class.py  training_executor.py
runtime/: CMakeLists.txt
runtime/cerberus_net/: CMakeLists.txt  main.cpp
runtime/cerberus_net/src/: cerberus.cpp  cerberus.hpp  kernel_utils.cu  nhwc2nchw.cu  utils.cpp  utils.hpp
runtime/cerberus_net/trt_plugins/: correlation.cpp  correlation.cu  correlation.hpp  grid_sampler.cpp  grid_sampler.cu  grid_sampler.hpp  scatter_nd.cpp  scatter_nd.cu  scatter_nd.hpp  trt_utils.hpp
runtime/nvx_demo/: CMakeLists.txt  main.cpp
runtime/nvx_demo/src/: nvx_pipeline.hpp
runtime/nvx_demo/src/nvx_kernels/: demosaic_node.cpp  rectification_node.cpp  rectification_node.hpp
src/: main.cpp
src/lib/: CMakeLists.txt  camera_properties.hpp  nvx_pipeline.cpp  nvx_pipeline.hpp  rectifier.cpp  rectifier.hpp
src/lib/nvx_kernels/: demosaic_node.hpp
src/lib/trt_plugins/: correlation.cpp  correlation.cu  correlation.cuh  correlation.hpp  grid_sampler.cpp  grid_sampler.cu  grid_sampler.cuh  grid_sampler.hpp  trt_utils.h  trt_utils.hpp
